# fastapi-template

./: README.md  alembic.ini  logging.ini  pyproject.toml
alembic/versions/: 2022-12-26_create_users_table.py
src/: config.py  main.py
src/health/: config.py  constants.py  exceptions.py  router.py
tests/health/: test_ping.py
