[tool.poetry]
name = "skeleton"
version = "0.1.0"
description = ""
authors = ["akiosarkiz <akiosarkiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pytest = "^7.2.0"
httpx = "^0.23.1"
alembic = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
